# g730-performance

./: .gitignore
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_content_hash.py  003_add_target_carry.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/analytics/: __init__.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  profiles.py  router.py  sessions.py
backend/app/core/: __init__.py  exceptions.py  security.py
backend/app/data/: __init__.py  drills.json
backend/app/models/: __init__.py  base.py  club.py  profile.py  session.py  shot.py  user.py
backend/app/parsers/: __init__.py  base.py  bushnell_dr.py  bushnell_sa.py  bushnell_session.py
backend/app/schemas/: __init__.py  ai_analysis.py  auth.py  profile.py  session.py
backend/app/services/: __init__.py  ai_analysis.py  auth.py  billing.py  processing.py
backend/scripts/: dedup_sessions.py  seed_admin.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_analytics.py  test_auth.py  test_sessions.py
backend/tests/test_parsers/: test_bushnell_dr.py  test_bushnell_session.py
public/: CNAME  index.html  landing.html  logo-options.html  manifest.json  sw.js
public/app/: api-client.js  index.html  manifest.json  sessions.json  sw.js
public/signup/: index.html
